<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/notify_select_engine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <RadioGroup
        android:id="@+id/engine_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/engine_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/str_engine_simple"/>
        <RadioButton
            android:id="@+id/engine_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_engine_target"/>
        <RadioButton
            android:id="@+id/engine_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_engine_normal"/>
        <RadioButton
            android:id="@+id/engine_turn_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_engine_turn_test"/>
        <RadioButton
            android:id="@+id/engine_forward_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_engine_forward_test"/>
    </RadioGroup>

    <include
        android:id="@+id/target_point_input_layout"
        layout="@layout/target_point_input" />
</LinearLayout>