<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_map_scope" />

        <TextView
            android:id="@+id/map_scope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/val_INFINITY" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_of_remote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rc_status" />

        <TextView
            android:id="@+id/remote_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnected" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_car_status" />

        <TextView
            android:id="@+id/car_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/val_INFINITY" />
    </LinearLayout>

</LinearLayout>