<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tango_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lenovo.newdevice.tangocar.TangoCarActivity">

    <Button
        android:text="@string/mission_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/btn_mission_mode"
        android:layout_below="@+id/btn_study_mdoe"
        android:layout_centerHorizontal="true"
        android:onClick="onMissionMode" />

    <Button
        android:text="@string/test_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/btn_test_view"
        android:layout_below="@+id/btn_mission_mode"
        android:layout_centerHorizontal="true"
        android:onClick="onTestMode" />

    <Button
        android:text="@string/study_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:id="@+id/btn_study_mdoe"
        android:onClick="onStudyMode"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
